Align e2e tests to template registration

--- a/fixtures/template.hbs
+++ b/fixtures/template.hbs
@@ -1,8 +1,10 @@
-Cześć {{num}}.
-++
-{{>a ~}}
---
-{{>b ~}}
---
-{{>c ~}}
-==
+Number: {{num}}.
+
+A partial:
+{{> a ~}}
+
+B partial:
+{{> b ~}}
+
+C partial:
+{{> c ~}}
